# world-wonders-explorer

./: Cargo.toml  README.md  index.html  justfile  robots.txt  tailwind.config.js
src/: api.rs  app.rs  data.rs  main.rs
src/components/: external_link.rs  mod.rs  page_picker.rs  per_page.rs  theme_toggle.rs
src/sections/: footer.rs  mod.rs
src/sections/control/: combos.rs  mod.rs  popover.rs  toggle_sort_order.rs
src/sections/control/limits/: mod.rs  slider.rs  time_period_combo.rs
src/sections/wonders/: carousel.rs  mod.rs  wonder.rs
style/: tailwind.css
