[package]
name = "world-wonders-explorer"
version = "0.0.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
icondata = "0.4.0"
leptos = { version = "0.6.14", features = ["csr", "nightly", "tracing"] }
leptos_meta = { version = "0.6.14", features = ["csr", "nightly"] }
leptos_darkmode = "0.2.0"
leptos_icons = "0.3.1"
reqwasm = "0.5.0"
thiserror = "1"
serde = { version = "1.0.207", features = ["derive", "rc"] }
serde_json = { version = "1.0.124", features = ["preserve_order"] }
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
serde_qs = "0.13.0"
chrono = "0.4.38"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
leptos-use = "0.13.3"

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1

[package.metadata.leptos]
lib-profile-release = "wasm-release"

[package.metadata.cargo-udeps.ignore]
normal = ["console_error_panic_hook"]
